# bosch_project

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  blueprints.py  config.py
app/models/: __init__.py  defect.py  enums.py  inspection.py  inspector.py  product.py
app/routes/: __init__.py  defect.py  inspection.py  inspector.py  product.py  report.py
app/services/: defect_service.py  inspection_service.py  inspector_service.py  product_service.py  report_service.py
app/services/reports/: defect.py  inspection.py  inspector.py  product.py  report.py
app/static/css/: main.css
app/static/js/: main.js
app/templates/: index.html
migrations/versions/: 86941ee8c443_initialize_database.py
scripts/: create_db.sql  seed_database.py
