[project]
name = "bosch-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.3",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "jinja2>=3.1.6",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
]
